Streamline version pathing
